public/stylesheets/style.css
body {
	/*padding: 50px;*/
	font: 14px "Montserrat", Helvetica, Arial, sans-serif;
	overflow-x: hidden;
}

a {
	color: #00B7FF;
}

h1,h2,h3,h4,h5,h6 {
	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
	text-transform: uppercase;
	font-weight: 700;
}

@media (max-width: 500px) {
	#tournament-info, .user-info {
		font-size: smaller;
	}
	#tournaments {
		word-break:break-all;
	}
}

header {
	text-align: center;
	background-image: url('http://www.debating.de/BDUDBdev/Berlin_Panorama_mit_Fernsehturm.jpg');
	background-repeat: no-repeat;
	background-size: 100% 600px;
	background-position: center top;
	background-attachment: fixed;
}
header .container {
	padding-top: 100px;
	padding-bottom: 50px;
}
header img {
	display: block;
	margin: 0 auto 20px;
}
header .intro-text .name {
	display: block;
	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
	text-transform: uppercase;
	font-weight: 700;
	color: #FFF;
	font-size: 2em;
    background: rgba(12,12,12,0.45);
}
header .intro-text .skills {
	font-size: 1.25em;
	font-weight: 300;
    color: white;
	background-color: rgba(12,12,12,0.45);
    padding-right: 7px;
    padding-left: 7px;
	background-size: 1.40em;
}
@media (min-width: 769px) {
	header {
		text-align: center;
		background-image: url('http://www.debating.de/BDUDBdev/Berlin_Panorama_mit_Fernsehturm.jpg');
		background-repeat: no-repeat;
	}
	header .container {
		padding-top: 80px;
		padding-bottom: 50px;
	}
	header .intro-text .name {
        display:inline;
        padding-right: 15px;
        padding-left: 15px;
		font-size: 4em;
	}
	header .intro-text .skills {
		font-size: 1.75em;
	}
}

section {
	padding: 30px 0;
}
section h2 {
	margin: 0;
	font-size: 3em;
}

hr.star-light, hr.star-user, hr.star-comments {
	padding: 0;
	border: none;
	border-top: solid 5px;
	text-align: center;
	max-width: 250px;
	margin: 25px auto 30px;
}
hr.star-user:after {
	content: "\f007";
	font-family: FontAwesome;
	display: inline-block;
	position: relative;
	top: -0.8em;
	font-size: 2em;
	padding: 0 0.25em;
}
hr.star-comments:after {
	content: "\f086";
	font-family: FontAwesome;
	display: inline-block;
	position: relative;
	top: -0.8em;
	font-size: 2em;
	padding: 0 0.25em;
}
hr.star-light, hr.star-user, hr.star-comments {
	border-color: black;
}
hr.star-light:after, hr.star-comments:after {
	background-color: #FFF;
	color: black;
}
hr.star-user:after {
	background-color: #F4FCFB;
	color: black;
}

#tournament-info {
	text-align: center;
	background: #FFF;
}
#tournament-info .container {
	padding-top: 20px;
	padding-bottom: 20px;
}

.user-info {
	text-align: center;
	background: #F4FCFB;
}

.user-info .container {
	padding-top: 20px;
	padding-bottom: 20px;
}

.user-info .user-info-table {
	font-size: 1.25em;
	font-weight: 300;
}

.footer {
	height: 70px;
}

.nav-img {
	height: 50px;
	padding-left: 50px;
}

.bottom-content {
	position: absolute;
	bottom: 0;
}

.image-cropper {
	position: relative;
	overflow: hidden;
	width: 250px;
	height: 250px;
	margin: 0 auto;
	border:4px solid gainsboro;
	border-radius: 50%;
}

.image-cropper2 {
	position: relative;
	overflow: hidden;
	width: 20px;
	height: 20px;
	margin: 0 auto;
	border:4px solid gainsboro;
	border-radius: 50%;
}

.image-cropper label{
}

.image-cropper .img-hor {
	position: absolute;
	height: 100%;
	width: auto;
	cursor: pointer;
}

.image-cropper .img-vert {
	position: absolute;
	height: auto;
	width: 100%;
	cursor: pointer;
}

.wellpadding {
	padding-top: 35px;
	border:0px;
	border-color: #74907C;
	border-style: solid;
	border-radius: 1%;
}

.details th {
	min-width: 135px;
}
.details td {
	text-align: right;
}
.left-align td, th {
	text-align: left;
}

.preventWrap {
	white-space: nowrap;
}

.btnpadding {
	margin-left: 20px;
}
.btnpadding_top {			
	padding-top: 15px;
}
.btnpadding_top2 {			
	padding-top: 85px;
}

.reg {
	position: absolute;
	right: 10px;
	top: 0px;
	padding: 10px;
}

.edit {
	position: absolute;
	right: 10px;
	top: 80px;
	padding: 10px;
}

.delete {
	position: absolute;
	right: 10px;
	top: 120px;
	padding: 10px;
}

.image-upload img
{
	width: 80px;
	cursor: pointer;
}

.animate {
	-webkit-transition: all 0.3s ease-in-out;
	-moz-transition: all 0.3s ease-in-out;
	-o-transition: all 0.3s ease-in-out;
	-ms-transition: all 0.3s ease-in-out;
	transition: all 0.3s ease-in-out;
}
/*++++++++++++++++++++++++++*/
/*+++BOOTSTRAP NAVBAR+++++++*/
/*++++++++++++++++++++++++++*/

@media (max-width: 991px) {
	.navbar-header {
		float: none;
	}
	.navbar-left,.navbar-right {
		float: none !important;
	}
	.navbar-toggle {
		display: block;
	}
	.navbar-collapse {
		border-top: 1px solid transparent;
		box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
	}
	.navbar-fixed-top {
		top: 0;
		border-width: 0 0 1px;
	}
	.navbar-collapse.collapse {
		display: none!important;
	}
	.navbar-nav {
		float: none!important;
		margin-top: 7.5px;
	}
	.navbar-nav>li {
		float: none;
	}
	.navbar-nav>li>a {
		padding-top: 10px;
		padding-bottom: 10px;
	}
	.collapse.in{
		display:block !important;
	}
}

.navbar-toggler {
	height: 35px;
	width: 42px;
	margin-top: 3px;
}

.nav-image {
	margin-top: 9px;
	height: 40px;
	width: 40px;
	border:0.1px solid gainsboro;
	border-radius: 50%;
}

.verticalFlip {
	-moz-transform: scale(-1, 1);
	-webkit-transform: scale(-1, 1);
	-o-transform: scale(-1, 1);
	-ms-transform: scale(-1, 1);
	transform: scale(-1, 1);
	margin-left: -1px;

}

.totalDebt {
	margin-left: 0;
}
.personnelDebt {
	margin-right: 0;
}

/*+++++++++++++++++++++++++++*/
/*responsive button sizes*/
/*+++++++++++++++++++++++++++*/

@media (max-width: 768px) {
	.btn-responsive {
		padding:2px 4px;
		font-size:80%;
		line-height: 1;
	}
}

@media (min-width: 769px) and (max-width: 992px) {
	.btn-responsive {
		padding:4px 9px;
		font-size:90%;
		line-height: 1.2;
	}
}

/*+++++++++++++++++++++++++++*/
/*ng file upload and img crop*/
/*+++++++++++++++++++++++++++*/

/* line 1, ../../source/scss/ng-img-crop.scss */
img-crop {
	width: 100%;
	height: 100%;
	display: block;
	position: relative;
	overflow: hidden;
}
/* line 7, ../../source/scss/ng-img-crop.scss */
img-crop canvas {
	display: block;
	position: absolute;
	top: 50%;
	left: 50%;
	outline: none;
	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
	/* mobile webkit */
}
.cropArea {
	background: #E4E4E4;
	overflow: hidden;
	width:500px;
	height:350px;
}
form .progress {
	line-height: 15px;
}
.progress {
	display: inline-block;
	width: 100px;
	border: 3px groove #CCC;
}
.progress div {
	font-size: smaller;
	background: orange;
	width: 0;
}

.file-upload .btn {
	margin: 10px;
}


/*+++++++++++++++++++++++++++*/
/*++++++IMAGE MODAL++++++++++*/
/*+++++++++++++++++++++++++++*/

#myImg {
	border-radius: 5px;
	cursor: pointer;
	transition: 0.3s;
}

#myImg:hover {opacity: 0.7;}

/* The Modal (background) */
.modal {
	display: none; /* Hidden by default */
	position: fixed; /* Stay in place */
	z-index: 1; /* Sit on top */
	padding-top: 100px; /* Location of the box */
	left: 0;
	top: 0;
	width: 100%; /* Full width */
	height: 100%; /* Full height */
	overflow: auto; /* Enable scroll if needed */
	background-color: rgb(0,0,0); /* Fallback color */
	background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
}

/* Modal Content (image) */
.modal-content {
	margin: auto;
	display: block;
	width: 80%;
	max-width: 700px;
}

/* Caption of Modal Image */
#caption {
	margin: auto;
	display: block;
	width: 80%;
	max-width: 700px;
	text-align: center;
	color: #ccc;
	padding: 10px 0;
	height: 150px;
}

/* Add Animation */
.modal-content, #caption {
	-webkit-animation-name: zoom;
	-webkit-animation-duration: 0.6s;
	animation-name: zoom;
	animation-duration: 0.6s;
}

@-webkit-keyframes zoom {
	from {-webkit-transform:scale(0)}
	to {-webkit-transform:scale(1)}
}

@keyframes zoom {
	from {transform:scale(0)}
	to {transform:scale(1)}
}

/* The Close Button */
.close {
	position: absolute;
	top: 15px;
	right: 35px;
	color: #f1f1f1;
	font-size: 40px;
	font-weight: bold;
	transition: 0.3s;
}

.close:hover,
.close:focus {
	color: #bbb;
	text-decoration: none;
	cursor: pointer;
}

/* 100% Image Width on Smaller Screens */
@media only screen and (max-width: 700px){
	.modal-content {
		width: 100%;
	}
}


/*+++++++++++++++++++++++++++*/
/*++++++SNACKBAR+++++++++++++*/
/*+++++++++++++++++++++++++++*/

#snackbarSuccess {
	visibility: hidden;
	min-width: 250px;
	margin-left: -125px;
	background-color: #DFF0D8;
	color: #3C763D;
	text-align: center;
	border-radius: 28px;
	border: 2px solid #3C763D;
	padding-left: 26px;
	padding-right: 26px;
	padding-top: 10px;
	padding-bottom: 10px;
	position: fixed;
	z-index: 1;
	left: 45%;
	bottom: 30px;
	font-size: 25px;
}

#snackbarError {
	visibility: hidden;
	min-width: 250px;
	margin-left: -125px;
	background-color: #F2DEDE;
	color: #B84442;
	text-align: center;
	border-radius: 28px;
	border: 2px solid #B84442;
	padding-left: 26px;
	padding-right: 26px;
	padding-top: 10px;
	padding-bottom: 10px;
	position: fixed;
	z-index: 1;
	left: 40%;
	bottom: 30px;
	font-size: 25px;
}

#snackbarSuccess.show {
	visibility: visible;
	-webkit-animation: fadein 0.5s, fadeout 0.5s 3.5s;
	animation: fadein 0.5s, fadeout 0.5s 3.5s;
}

#snackbarError.show {
	visibility: visible;
	-webkit-animation: fadein 0.5s, fadeout 0.5s 3.5s;
	animation: fadein 0.5s, fadeout 0.5s 3.5s;
}

@-webkit-keyframes fadein {
	from {bottom: 0; opacity: 0;}
	to {bottom: 30px; opacity: 1;}
}

@keyframes fadein {
	from {bottom: 0; opacity: 0;}
	to {bottom: 30px; opacity: 1;}
}

@-webkit-keyframes fadeout {
	from {bottom: 30px; opacity: 1;}
	to {bottom: 0; opacity: 0;}
}

@keyframes fadeout {
	from {bottom: 30px; opacity: 1;}
	to {bottom: 0; opacity: 0;}
}

/*FOOTER*/
html, body {
    height: 100%;
    margin: 0;
}

.content {
    min-height: 100%;
    margin: 0 auto -50px;
}

footer {
    position: 0;
    border-top: solid 1px;
    border-color: #1b1b1b;
    background: #f7f7f7;
    line-height: 40px;
    padding: 0 20px;
    margin-top: 30px;
}

.footer {
    height: 40px;
}

/*CONDITIONAL MONETARY STYLING*/

/* right-align monetary amounts */
.currencySign[data-monetary-amount] {
	text-align: right;
	white-space: nowrap;
}

/* make the cells output their value */
.currencySign[data-monetary-amount]:after {
	content: attr(data-monetary-amount);
	color: #2ab269;
}

/* make debit amounts show up in red */
.currencySign[data-monetary-amount^="-"]:after {
	color: #db2a28;
}

